# pythonroadmap

./: dictionaries.py  pyproject.toml
Projects/: modules.xml
matplotlib/skills/: histograms.py  intro.py  pandas+matplotlib.py  plot_customisation.py  scatter_plots.py  subplots.py
numpy/: aggregate_functions.py
numpy/Practice/: Arithmetic and broadcasting.py  Broadcasting_and_reshaping.py  Random_and_aggregatefunction (3).py  Slicing_and_multidimensionalarrays.py  basicslicing.py  slicing_and_multidimensionalarray (1).py  slicing_and_multidimensionalarray (2).py
numpy/practice/: Arithmetic and broadcasting (2).py  Filtering_and_booleanindexing (2).py  Filtering_and_booleanindexing.py  Random_and_aggregatefunction (4).py  Random_and_aggregatefunctions (2).py  Random_and_aggregatefunctions.py  Reverse_and_partialslice.py  Slicing_and_multidimensionalarray_and_reshape.py
numpy/skills/: arithmetic.py  broadcasting.py  filtering.py  multidimensional_arrays.py  random_numbers.py  reshaping_arrays.py  slicing.py
pandas/: data_cleaning.py  data_inspection.py  importing.py
pandas/data_cleaning/dirty_animal_data/: dirty_animal_data.py
pandas/practice/: data_cleaning_prac.py  data_cleaning_prac2.py  datatypes_and_conversion_cleaning.py  handling_catagorical_data_cleaning.py  importing.py  missing_values_cleaning.py  series.py
pandas/skills/: aggregation.py  data_cleaning.py  data_inspection.py  dataframes.py  filtering.py  importing&exporting.py  selection.py  series.py
python/: dictionaries.py  tuples.py
scikit-learn/skills/: feature_selection.py  intro.py
(+6 files in other folders)
